# mir

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  GNUmakefile  HOW-TO-PORT-MIR.md  INSTALL.md  LICENSE  MIR.md  Makefile  README.md  RELEASE-NOTES.md  aarch64-interp.c  build.zig  m2libgccjit.cc  mir-aarch64.c  mir-aarch64.h  mir-alloc.h  mir-armv7.c  mir-bin-driver.c  mir-bin-run.c  mir-bitmap.h  mir-c.c  mir-code-alloc-default.c  mir-cx86_64-code.c  mir-cx86_64.h  mir-dlist.h  mir-gen-aarch64.c  mir-gen-armv7.c  mir-gen-ppc64.c  mir-gen-riscv64.c  mir-gen-s390x.c  mir-gen-stub.c  mir-gen-x86_64.c  mir-gen.c  mir-gen.h  mir-hash.h  mir-htab.h  mir-interp.c  mir-interp.h  (+23 more)
.github/workflows/: AMD64-Linux-OSX-Windows-test.yml  AMD64-Linux-bench.yml  aarch64-test.yml  apple-aarch64-test.yml  apple-aarch64.yml  bench.yml  build.yml  ppc64le-test.yml  riscv64-test.yml  s390x-test.yml  test.yml
adt-tests/: README.md  mir-bitmap-test.c  mir-htab-test.c  mir-reduce-test.c  mir-varr-test.c
c-benchmarks/: README.md  array.expect  binary-trees.c  binary-trees.expect  except.arg  except.c  except.expect  hash.arg  hash.c  hash.expect  hash2.expect  heapsort.c  mandelbrot.c  matrix.c  method-call.arg  run-benchmarks.sh  run-oggenc.sh  sieve.c  simple_hash.h
c-tests/: runtests.sh  use-c2m-bin-gen  use-c2m-bin-interp  use-c2m-gen  use-c2m-gen-O0  use-c2m-gen-O1  use-c2m-gen-O3  use-c2m-interp  use-c2m-parallel-gen  use-clang  use-gcc  use-l2m-gen  use-l2m-interp
c-tests/andrewchambers_c/: 0028-inits10.c  0028-inits11.c
c-tests/gcc/: 20000113-1.c  20001124-1.c  20040208-1.c  20050929-1.c  930622-2.c  README.md  conversion.c  string-opt-18.c
c-tests/havoc/: havoc5.c
c-tests/lacc/: bitfield-extend.c  bitfield-immediate-bitwise.c  bitfield-types.c  bitwise-complement.c  bitwise-sign-extend.c  cast-float-union.c  cast-function-args.c  constant-integer-type.c  convert-assign-immediate.c  convert-unsigned-float.c  directive-number.c  immediate-pointer.c  initialize-union.c  line-directive.c  long-double-arithmetic.c  long-double-compare.c  long-double-function.c  long-double-struct.c  long-double-union.c  macro-paste.c  pointer-immediate.c  shift.c  string-conversion.c  stringify.c  struct-alignment.c  struct-padding.c  struct.c  typedef-function.c  union-bitfield.c  union.c  vararg-complex-1.c  vararg-complex-2.c  whitespace.c
c-tests/mir/: addr-3.mir  big-blk-arg.mir  big-blk-arg2.mir  issue423.mir  issue424.mir  issue441.mir  paramless-vararg.mir  reg2.mir  reg2.mir.mach  scan_reserved_name.mir
c-tests/new/: add-issue211.c  array-address-in-initializer.c  bf1.c  bf2.c  bf3.c  bf4.c  bf5.c  cond-cast.c  int_min.c  issue142.c  issue191-4.c  issue194.c  issue211.c  issue23.c  issue23.expect  issue441.c  issue450.c  issue452-2.c  issue452.c  issue454.c  issue456.c  issue458.c  jcall.c  setjmp.c  ssa.c  va-ld-stack.c  va-struct-args.c  var-size-in-var-initializer.c
c2mir/: README.md  c2mir-driver.c  c2mir.c  c2mir.h  cx86_64-code.c  cx86_64.h  mirc.h  mirc_iso646.h  mirc_stdalign.h  mirc_stdbool.h  mirc_stdnoreturn.h
c2mir/aarch64/: caarch64-ABI-code.c  caarch64-code.c  caarch64.h  limits.h  mirc-aarch64-linux.h  mirc_aarch64_float.h  mirc_aarch64_limits.h  mirc_aarch64_linux.h  mirc_aarch64_stdarg.h  mirc_aarch64_stddef.h  mirc_aarch64_stdint.h  stddef.h
c2mir/armv7/: carmv7-ABI-code.c  carmv7-code.c  carmv7.h  mirc_armv7_float.h  mirc_armv7_linux.h  mirc_armv7_stdarg.h  mirc_armv7_stddef.h  mirc_armv7_stdint.h
c2mir/ppc64/: cppc64-ABI-code.c  cppc64-code.c  cppc64.h  mirc-ppc64-linux.h  mirc_ppc64_float.h  mirc_ppc64_limits.h  mirc_ppc64_linux.h  mirc_ppc64_stdarg.h  mirc_ppc64_stddef.h  mirc_ppc64_stdint.h
c2mir/riscv64/: criscv64-ABI-code.c  criscv64-code.c  mirc_riscv64_float.h  mirc_riscv64_limits.h  mirc_riscv64_linux.h  mirc_riscv64_stdarg.h  mirc_riscv64_stddef.h  mirc_riscv64_stdint.h
c2mir/s390x/: cs390x-ABI-code.c  cs390x-code.c  cs390x.h  mirc_s390x_float.h  mirc_s390x_linux.h  mirc_s390x_stdarg.h
c2mir/x86_64/: cx86_64-ABI-code.c  cx86_64-code.c  cx86_64.h  mirc-x86_64-linux.h  mirc-x86_64-win.h  mirc_x86_64_float.h  mirc_x86_64_limits.h  mirc_x86_64_linux.h  mirc_x86_64_stdarg.h  mirc_x86_64_stddef.h  mirc_x86_64_stdint.h  mirc_x86_64_win.h  stdarg.h
docs_CHN/: Basic Block & Specialization CHN.md  HOW-TO-PORT-MIR CHN.md
include/: mir-dlist.h  mir-htab.h  mir.h
include/mirc/: iso646.h  mirc.h  stdalign.h  stdnoreturn.h
include/mirc/aarch64/: stdarg.h
include/mirc/ppc64/: stdint.h
include/mirc/s390x/: float.h  limits.h  stdarg.h
include/mirc/x86-64/: float.h  limits.h  mirc-x86_64-linux.h  stdarg.h  stddef.h  stdint.h
llvm2mir/: llvm2mir-driver.c  llvm2mir.c  llvm2mir.h
mir-c/: mir-c.c
mir-tests/: api-loop.h  api-memop.h  api-sieve.h  args-interp.c  hello.c  hi-interp.c  io-bench.c  io.c  loop-interp.c  loop-sieve-gen.c  readme-example.c  real-time.h  run-test.c  scan-args.h  scan-hi.h  scan-sieve.h  scan-test.c  sieve-interp.c  simplify.c  test-gen.c  test-read.h  test1.mir  test10.mir  test11.mir  test12.mir  test13.mir  test14.mir  test16.mir  test2.mir  test3.mir  test4.mir  test5.mir  test6.mir  test7.mir  test8.mir  test9.mir
mir-utils/: README.md  b2ctab.c  b2m.c  m2b.c
mir2c/: mir2c.c  mir2c.h
tests/: mir-bitmap-test.c  mir-dlist-test.c  mir-htab-test.c  mir-varr-test.c
util-tests/: mir-bitmap-test.c  mir-dlist-test.c  mir-htab-test.c  mir-varr-test.c
